# vm

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Dockerfile  Dockerfile.ubuntu.20.04  LICENSE  LICENSE-CODE.txt  LICENSE.md  Makefile  README  README.md  build.sh  build_test.sh  cmake_install.cmake  config.def.h  files  main  main.c  run.sh  test_run.sh  todo
.github/workflows/: c-cpp.yml  c.yml  cmake.yml
config/: make.global
makefiles/: cicd.mk  container.mk  format.mk  submake.global  version.mk
scripts/: clang-format.sh  clang_format.sh  configure_config.sh  configure_version.sh  git-delete-branches.sh  git-download-all-branches.sh  git-show-files-on-commit.sh  run.sh
src/: Makefile  assert.h  config.h  defaults.h  instructions.h  limits.h  macros.h  registers.h  stats.c  stats.h  statuscode.c  statuscode.h  string.c  string.h  tokenize.c  tokenize.h  tokenstream.c  tokenstream.h  types.h  util.h  version.h  vm.c  vm.h
src/instruction/: Makefile  add.c  add.h  and.c  dec.c  div.c  halt.c  halt.h  inc.c  je.c  jg.c  jge.c  jl.c  jle.c  jmp.c  jne.c  label.c  load.c  log.c  mul.c  neg.c  nop.c  or.c  pop.c  push.c  save.c  shl.c  shr.c  sub.c  xor.c
src/status_code_handler/: failed.c  successful.c
test/: Makefile  test.c  test.h  test_assert.h  test_color.h  test_instruction_add.c  test_instruction_add.h  test_instructions.h  test_string.c  test_tokenize.c  test_types.h  test_util.h  types.h
test/instruction/: test_add.c  test_and.c  test_dec.c  test_div.c  test_halt.c  test_inc.c  test_je.c  test_jg.c  test_jge.c  test_jl.c  test_jle.c  test_jmp.c  test_jne.c  test_label.c  test_load.c  test_log.c  test_mul.c  test_neg.c  test_nop.c  test_or.c  test_pop.c  test_push.c  test_save.c  test_shl.c  test_shr.c  test_sub.c  test_xor.c
